k8s/ingress/ingress.yaml
# This is from Engineering with Morris
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-webpage-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
      - mywebpage.com
      secretName: tls-secret
  rules:
  - host: mywebpage.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-webpage-svc
            port:
              number: 80
